# gemini-v3-test-g7-least-errors-temp1

./: README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
android/: buildozer.spec
proto/: compile_proto.py  market.proto
scripts/: download_historical.py  run_latency_bench.py
src/cryptochart/: __init__.py  aggregator.py  config.py  logging_config.py  normalizer.py  persistence.py  publisher.py
src/cryptochart/adapters/: __init__.py  base.py  binance.py  bitget.py  bitstamp.py  bitvavo.py  coinbase.py  digifinex.py  kraken.py  okx.py
src/cryptochart/ui/: __init__.py  main.py  qt_asyncio_integration.py
src/cryptochart/ui/views/: __init__.py  chart_view.py  pair_selector.py  settings_panel.py
src/cryptochart/utils/: __init__.py  rate_limiter.py  ringbuffer.py  time.py
tests/: test_vwap_cumvol_consistency.py
tests/integration/: test_latency_budget.py  test_multi_exchange_resilience.py
tests/unit/: test_aggregator.py  test_normalizer.py  test_ringbuffer.py
